--- a/fr/livre_fr.html
+++ b/fr/livre_fr.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
     <main>
-        <p class="livre_article_intro">Il existe de nombreux romans qui racontent des histoires sur le climat, l'environnment, l'écologie et les combats pour défendre ses différents termes. Parmi ses romans, un seul a retenu notre attention, c'est État d'urgence de Michael Crichton !</p>
+        <p class="livre_article_intro">Il existe de nombreux romans qui racontent des histoires sur le climat, l'environnement, l'écologie et les combats pour défendre ses différents termes. Parmi ses romans, un seul a retenu notre attention, c'est État d'urgence de Michael Crichton !</p>
         <img class="livre_article_image_primary" src="../public/img/Image_état_d'urgence.webp" alt="Couverture du livre État d'urgence">
         
         <article>
@@ -75,14 +75,14 @@
             <p class="livre_article_texte_content">
             Il est né le 23 octobre 1942 à Chicago et décède le 4 novembre 2008 à Los Angeles.
             C'est avant tout un écrivain américain dans la science-fiction. Il est aussi scénariste et producteur de films.
-            Parmis ses principaux romans et nouvelles à succès, on compte Jurassic Park, Le Monde perdu, Sphère, Westworld et 13e Guerrier.
+            Parmi ses principaux romans et nouvelles à succès, on compte Jurassic Park, Le Monde perdu, Sphère, Westworld et 13e Guerrier.
             </p>
         </article>
         <article>
             <h3 class="livre_article_texte_tittle">Pourquoi État d'urgence ?</h3>
             <p class="livre_article_texte_content">
             Michael Cricton a écrit ce livre afin de dénoncer les problèmes concernant l'écologie,
-            l'environnment, le climat et bien d'autres.
+            l'environnement, le climat et bien d'autres.
             Son but principal était de montrer au monde l'enjeu important qui viendrait à se produire dans les années
             futures notamment le réchauffement climatique
             </p>
