--- a/fr/espoir_fr.html
+++ b/fr/espoir_fr.html
@@ -29,7 +29,7 @@
                 <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
             </div>
             <div class="element-header-texte-4">
-                <h1 class="h1-header">Sauvez la planète</h1>
+                <h1 class="h1-header">Sauver la planète</h1>
             </div>
         </div>
 
@@ -49,20 +49,20 @@
         </nav>
     </header>
     <main>
-        <p class="espoir_article_intro">Comme vous le constatez aujourd’hui, le monde va mal, la planète va mal. Il faut faire quelque chose ! Selon nous, sauvez la planète serait un espoir, l’espoir de donner aux futurs générations une planète propre et en bonne santé. Mais bon on ne va pas se le cacher, c’est mal parti.</p>
-        <p class="espoir_article_intro">Commençons par se poser une question simple Sauvez la planète, c’est quoi ?</p>
+        <p class="espoir_article_intro">Comme vous le constatez aujourd’hui, le monde va mal, la planète va mal. Il faut faire quelque chose ! Selon nous, sauvez la planète serait un espoir, l’espoir de donner aux futures générations une planète propre et en bonne santé. Mais bon on ne va pas se le cacher, c’est mal parti.</p>
+        <p class="espoir_article_intro">Commençons par se poser une question simple Sauver la planète, c’est quoi ?</p>
         <img src="../public/img/Planète_1.webp" alt="Image de la planète qui souffre">
 
         <article>
             <h3 class="espoir_article_texte_tittle">Sauvez la planète, c'est quoi ?</h3>
             <p class="espoir_article_texte_content">Cette action c’est faire quelque chose, il faut faire une action peu importe qui nous sommes, peu importe notre âge, notre taille, notre poids. Nous pouvons tous faire quelque chose du nourrisson à la personne âgée nous pouvons tous intervenir pour sauver la planète de demain.</p>
-            <p class="espoir_article_texte_content">Sauvez la planète c’est avant tout un grand combat, que ce donne de grands Hommes & de grandes Femmes. C’est le fait de vouloir sauver celle-ci, avant tout réparer les mauvaises actions que l’Homme a pu faire dans le passé. On peut citer par ex : <strong>la déforestation, la pollution de l’air & du sol, l’extinction d’espèces animales et végétales aainsi que bien d'autres.</strong> Toutes ces choses n’ont qu’un seul point d’origine c’est l’Homme. Sans lui, la planète se porterait bien. Mais aujourd’hui le compte à rebours de ce grand combat est lancé !</p>
-            <p class="espoir_article_texte_content">Mais comment sauvez la planète ?</p>
+            <p class="espoir_article_texte_content">Sauvez la planète c’est avant tout un grand combat, que se donne de grands Hommes & de grandes Femmes. C’est le fait de vouloir sauver celle-ci, avant tout réparer les mauvaises actions que l’Homme a pu faire dans le passé. On peut citer par ex : <strong>la déforestation, la pollution de l’air & du sol, l’extinction d’espèces animales et végétales ainsi que bien d'autres.</strong> Toutes ces choses n’ont qu’un seul point d’origine c’est l’Homme. Sans lui, la planète se porterait bien. Mais aujourd’hui le compte à rebours de ce grand combat est lancé !</p>
+            <p class="espoir_article_texte_content">Mais comment sauver la planète ?</p>
             <img src="../public/img/Planète_2.webp" alt="Image de la planète qu'il faut sauver">
         </article>
         <article>
             <h3 class="espoir_article_texte_tittle">Comment sauvez la planète ?</h3>
-            <p class="espoir_article_texte_content">Pour sauvez la planète, il faudrait avant tout arrêter de polluer, mais c’est plus facile à dire qu’à faire. La pollution est le facteur principal de la déchéance de la Planète. On peut citer par ex, les grandes mers de plastique qui ce sont formés par les nombreux plastiques jetés tous les jours dans la nature. Des tonnes et des tonnes partout dans le monde. Pour la sauver, il faudra que chaque être humain réalise des bons gestes : <strong> le tri des déchets, ne pas gaspiller l’eau, l’électricité et bien d’autre.</strong></p>
+            <p class="espoir_article_texte_content">Pour sauver la planète, il faudrait avant tout arrêter de polluer, mais c’est plus facile à dire qu’à faire. La pollution est le facteur principal de la déchéance de la Planète. On peut citer par ex, les grandes mers de plastique qui se sont formés par les nombreux plastiques jetés tous les jours dans la nature. Des tonnes et des tonnes partout dans le monde. Pour la sauver, il faudra que chaque être humain réalise des bons gestes : <strong> le tri des déchets, ne pas gaspiller l’eau, l’électricité et bien d’autres.</strong></p>
             <p class="espoir_article_texte_content">Certains pays comme la France, commencent à se rendre compte de l’état actuel de la planète et mettent en place des mesures. Mais d’autres n’ont pas encore réagi comme par ex : Les États-Unis, l'Inde & la Chine.</p>
             <p class="espoir_article_texte_content">Il faut faire vite le temps est compté !</p>
             <p class="espoir_article_texte_content">Article suivant : "Le réchauffement climatique"</p>
