--- a/fr/apropos_fr.html
+++ b/fr/apropos_fr.html
@@ -54,7 +54,7 @@
         <p class="app_article_texte_content">Nous devions réaliser ce site internet pour notre projet individuel du 1er semestre, j’espère que celui-ci vous a plu !</p>
         <p class="app_article_texte_content">Plus d’infos sur moi, je suis avant tout un passionné de jeux vidéo, j’adore jouer à différents jeux... J’aime aussi produire et réaliser des vidéos sur YouTube mais aussi faire des lives en direct sur Twitch.</p>
         <p class="app_article_texte_content">Ma devise n’est autre que : “Mon objectif, vous faire découvrir ma passion”</p>
-        <p class="app_article_texte_content">Dans le futur, j’aimerai pourquoi pas fonder mon entreprise de création de contenus.</p>
+        <p class="app_article_texte_content">Dans le futur, j’aimerais pourquoi pas fonder mon entreprise de création de contenus.</p>
         <p class="app_article_texte_content">Enfin bref, c’est tout pour moi...</p>
         <p class="app_article_texte_content">Pour encore et toujours plus d’infos sur moi, n’hésitez pas à me suivre sur les réseaux</p>
         <div class="social_button">
