Ajoute liens autres projets + Optimisation GitHub

--- a/fr/autreprojets_fr.html
+++ b/fr/autreprojets_fr.html
@@ -53,7 +53,7 @@
 
         <article>
             <div class="ap_article_texte_content_site_tittle">
-            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">Tengu Road</a>
+            <a class="ap_article_texte_content_site_tittle" href="https://www.tengu-road.lucas-bardey.fr/" target="_blank">Tengu Road</a>
             </div>
             <p class="ap_article_texte_content_name">Lucas BARDEY</p>
         </article>
@@ -89,7 +89,7 @@
         </article>
         <article>
             <div class="ap_article_texte_content_site_tittle">
-            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">Dicta</a>
+            <a class="ap_article_texte_content_site_tittle" href="http://dicta.ch-loe.fr/" target="_blank">Dicta</a>
             </div>
             <p class="ap_article_texte_content_name">Chloe BIZET</p>
         </article>
@@ -107,7 +107,7 @@
         </article>
         <article>
             <div class="ap_article_texte_content_site_tittle">
-            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">Wikipiece</a>
+            <a class="ap_article_texte_content_site_tittle" href="http://wikipiece.yannisborel.fr/" target="_blank">Wikipiece</a>
             </div>
             <p class="ap_article_texte_content_name">Yannis BOREL</p>
         </article>
@@ -119,13 +119,13 @@
         </article>
         <article>
             <div class="ap_article_texte_content_site_tittle">
-            <a class="ap_article_texte_content_site_tittle" href="#" target="_blank">As Time Flies</a>
+            <a class="ap_article_texte_content_site_tittle" href="time-flies.dalil-hammachi.fr" target="_blank">As Time Flies</a>
             </div>
             <p class="ap_article_texte_content_name">Dalil HAMMACHI</p>
         </article>
         <article>
             <div class="ap_article_texte_content_site_tittle">
-            <a class="ap_article_texte_content_site_tittle" href="#" >Rake over the ashes</a>
+            <a class="ap_article_texte_content_site_tittle" href="https://rake-over-the-ashes.alexisbernardev.fr/" >Rake over the ashes</a>
             </div>
             <p class="ap_article_texte_content_name">Alexis BERNARD</p>
         </article>
